# bcg729

./: .gitignore  BUILD_NOTES.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  Makefile.objects  README.md  README_TESTS.md  bcg729.c  bcg729.dep  bcg729.la  bcg729.lo  clean-and-commit.sh  clean.sh  config.h  config.h.in  config.m4  config.nice  config.status  configure~  php_bcg729.h  recompile.sh  test_memory_leak.php  test_simple.php  test_valgrind.sh
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
autom4te.cache/: output.0  output.1  requests  traces.0
modules/: bcg729.la
